# superset-promote-dashboard

./: README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml
openspec/changes/archive/2026-07-05-github-ci-pypi/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-github-ci-pypi/specs/ci-pypi-publish/: spec.md
openspec/changes/archive/2026-07-05-superset-promote-dashboard/: proposal.md  tasks.md
openspec/changes/archive/2026-07-05-superset-promote-dashboard/specs/dashboard-promotion/: spec.md
openspec/changes/archive/2026-07-05-superset-promote-dashboard/specs/test-environment/: spec.md
openspec/changes/superset-promote-dashboard/: design.md
openspec/specs/ci-pypi-publish/: spec.md
openspec/specs/dashboard-promotion/: spec.md
openspec/specs/test-environment/: spec.md
postgres/: init.sql
superset/: Dockerfile  import_connections.py  superset_config.py
superset_promote_dashboard/: __init__.py  promote_view.py  superset_api.py
superset_promote_dashboard/templates/: promote_dashboard.html
