[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "superset-promote-dashboard"
version = "0.1.1"
description = "Superset plugin to swap all chart datasources in a dashboard to a target database"
readme = "README.md"
packages = [{include = "superset_promote_dashboard"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = ">=2.3"
flask-appbuilder = ">=4.3"

[tool.poetry.group.dev.dependencies]
apache-superset = ">=4.1"
